--- a/nodejs/qr-watermark/package.json
+++ b/nodejs/qr-watermark/package.json
@@ -1,12 +1,15 @@
 {
   "author"                 : "Document Alchemy <api@documentalchemy.com>",
   "name"                   : "da-qr-watermark",
-  "version"                : "1.0.0",
+  "version"                : "1.0.1",
   "description"            : "An example of using the DocumentAlchemy API to generate a QR code and then stamp it on each page of a PDF as a watermark image.",
   "keywords"               : ["api","QR","qr-code","PDF","watermark","document"],
   "homepage"               : "https://documentalchemy.com",
   "license"                : "MIT",
   "main"                   : "./qr-watermark.js",
+  "bin": {
+    "qr-watermark"         : "./qr-watermark.js",
+  },
   "repository": {
     "type"                 : "git",
     "url"                  : "https://github.com/DocumentAlchemy/sample-code"
