fix typo in package.json

--- a/nodejs/qr-watermark/package.json
+++ b/nodejs/qr-watermark/package.json
@@ -8,7 +8,7 @@
   "license"                : "MIT",
   "main"                   : "./qr-watermark.js",
   "bin": {
-    "qr-watermark"         : "./qr-watermark.js",
+    "qr-watermark"         : "./qr-watermark.js"
   },
   "repository": {
     "type"                 : "git",
